syntax = "proto3";

option java_package = "grpc.projection.SourceProto";
option java_outer_classname = "SourceProjectionProto";


message SourceEntityStatisticsById {
  string sourceId = 1;
  string key = 2;
  int32 precision = 3;
}

message Statistics {
  string sourceId = 1;
  float mean = 2;
  float highest = 3;
  float lowest = 4;
  float variance = 5;
  int32 event_count = 6;

  // ... other statistic measurments
}



service SourceProjectionService {
  rpc SourceEntityStatistics(SourceEntityStatisticsById) returns (Statistics) {}
  // ... other statistics
}


